# vedicmaths

./: LICENSE  README.md  Readme.txt  Testers.py  VedicM.py  compliment.py  index.md  pyproject.toml
.pylint.d/: VedicM1.stats
tests/: test_arithmetic.py
vedicmathematics/: __init__.py  arithmetic.py
vedicmaths/: __init__.py
