[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vedicmaths"
version = "0.1.0"
description = "Python helpers for learning and applying Vedic mathematics techniques."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Karthik Srinivasan" }
]
keywords = ["vedic mathematics", "vedic maths", "mental math", "math", "education", "arithmetic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Education",
  "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/ksriniv2/vedicmaths"
Issues = "https://github.com/ksriniv2/vedicmaths/issues"

[tool.setuptools.packages.find]
include = ["vedicmathematics", "vedicmaths"]

[tool.pytest.ini_options]
testpaths = ["tests"]
